# parallel-programming-2026

./: .gitignore  CMakeLists.txt  Graph.xlsx  LAB1_REPORT.txt  Matrix.cpp  Matrix.h  Matrix_A.txt  Matrix_B.txt  Matrix_C.txt  README.md  StartMPI.pbs  calculation_verification.py  graph.py  graph_config.json  main.cpp  paths.json  tests.bat
results/: matrC.txt  statistics.csv  statistics.txt
results/100/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/1000/: Matrix_A.txt  Matrix_B.txt
results/1100/: Matrix_A.txt  Matrix_B.txt
results/200/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/300/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/400/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/500/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/600/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/700/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/800/: Matrix_A.txt  Matrix_B.txt
results/900/: Matrix_A.txt  Matrix_B.txt
results/graphs/: speedup_summary.csv  statistics_summary.csv
results/threads_1/100/exp_1/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/threads_1/100/exp_2/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/threads_1/100/exp_3/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/threads_1/100/exp_4/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/threads_1/100/exp_5/: Matrix_A.txt  Matrix_B.txt  Matrix_C.txt
results/threads_1/1000/exp_1/: Matrix_A.txt  Matrix_B.txt
results/threads_1/1000/exp_2/: Matrix_A.txt  Matrix_B.txt
sk_out/: slurm-252865.out  slurm-252874.out
(+126 files in other folders)
